@@ -19,8 +19,6 @@
 
 package org.apache.druid.metadata;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.base.Optional;
 import com.google.common.base.Suppliers;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
@@ -28,14 +26,16 @@ import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
 import org.apache.druid.client.DataSourcesSnapshot;
 import org.apache.druid.client.ImmutableDruidDataSource;
-import org.apache.druid.java.util.common.DateTimes;
 import org.apache.druid.java.util.common.Intervals;
 import org.apache.druid.java.util.common.StringUtils;
 import org.apache.druid.java.util.emitter.EmittingLogger;
-import org.apache.druid.segment.TestHelper;
+import org.apache.druid.segment.TestDataSource;
+import org.apache.druid.segment.metadata.CentralizedDatasourceSchemaConfig;
+import org.apache.druid.server.coordinator.CreateDataSegments;
 import org.apache.druid.server.metrics.NoopServiceEmitter;
 import org.apache.druid.timeline.DataSegment;
 import org.apache.druid.timeline.partition.NoneShardSpec;
+import org.assertj.core.util.Sets;
 import org.joda.time.Interval;
 import org.joda.time.Period;
 import org.junit.After;
@@ -44,148 +44,113 @@ import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 
-import java.io.IOException;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-
-public class SqlSegmentsMetadataManagerTest
+public class SqlSegmentsMetadataManagerTest extends SqlSegmentsMetadataManagerTestBase
 {
   private static DataSegment createSegment(
       String dataSource,
       String interval,
-      String version,
-      String bucketKey,
-      int binaryVersion
+      String version
   )
   {
     return new DataSegment(
         dataSource,
         Intervals.of(interval),
         version,
-        ImmutableMap.of(
-            "type", "s3_zip",
-            "bucket", "test",
-            "key", dataSource + "/" + bucketKey
-        ),
-        ImmutableList.of("dim1", "dim2", "dim3"),
-        ImmutableList.of("count", "value"),
+        ImmutableMap.of(),
+        ImmutableList.of(),
+        ImmutableList.of(),
         NoneShardSpec.instance(),
-        binaryVersion,
+        9,
         1234L
     );
   }
 
   @Rule
-  public final TestDerbyConnector.DerbyConnectorRule derbyConnectorRule = new TestDerbyConnector.DerbyConnectorRule();
+  public final TestDerbyConnector.DerbyConnectorRule derbyConnectorRule
+      = new TestDerbyConnector.DerbyConnectorRule();
 
-  private SqlSegmentsMetadataManager sqlSegmentsMetadataManager;
-  private SQLMetadataSegmentPublisher publisher;
-  private final ObjectMapper jsonMapper = TestHelper.makeJsonMapper();
+  private final DataSegment wikiSegment1 =
+      CreateDataSegments.ofDatasource(TestDataSource.WIKI).startingAt("2012-03-15").eachOfSizeInMb(500).get(0);
+  private final DataSegment wikiSegment2 =
+      CreateDataSegments.ofDatasource(TestDataSource.WIKI).startingAt("2012-01-05").eachOfSizeInMb(500).get(0);
 
-  private final DataSegment segment1 = createSegment(
-      "wikipedia",
-      "2012-03-15T00:00:00.000/2012-03-16T00:00:00.000",
-      "2012-03-16T00:36:30.848Z",
-      "index/y=2012/m=03/d=15/2012-03-16T00:36:30.848Z/0/index.zip",
-      0
-  );
-
-  private final DataSegment segment2 = createSegment(
-      "wikipedia",
-      "2012-01-05T00:00:00.000/2012-01-06T00:00:00.000",
-      "2012-01-06T22:19:12.565Z",
-      "wikipedia/index/y=2012/m=01/d=05/2012-01-06T22:19:12.565Z/0/index.zip",
-      0
-  );
-
-  private void publish(DataSegment segment, boolean used) throws IOException
+  private void publishUnusedSegments(DataSegment... segments)
   {
-    boolean partitioned = !(segment.getShardSpec() instanceof NoneShardSpec);
-    publisher.publishSegment(
-        segment.getId().toString(),
-        segment.getDataSource(),
-        DateTimes.nowUtc().toString(),
-        segment.getInterval().getStart().toString(),
-        segment.getInterval().getEnd().toString(),
-        partitioned,
-        segment.getVersion(),
-        used,
-        jsonMapper.writeValueAsBytes(segment)
-    );
+    for (DataSegment segment : segments) {
+      publishSegment(segment);
+      markSegmentsAsUnused(segment.getId());
+    }
+  }
+
+  private void publishWikiSegments()
+  {
+    publishSegment(wikiSegment1);
+    publishSegment(wikiSegment2);
   }
 
   @Before
   public void setUp() throws Exception
   {
-    TestDerbyConnector connector = derbyConnectorRule.getConnector();
-    SegmentsMetadataManagerConfig config = new SegmentsMetadataManagerConfig();
-    config.setPollDuration(Period.seconds(3));
-    sqlSegmentsMetadataManager = new SqlSegmentsMetadataManager(
-        jsonMapper,
-        Suppliers.ofInstance(config),
-        derbyConnectorRule.metadataTablesConfigSupplier(),
-        connector
-    );
-    sqlSegmentsMetadataManager.start();
-
-    publisher = new SQLMetadataSegmentPublisher(
-        jsonMapper,
-        derbyConnectorRule.metadataTablesConfigSupplier().get(),
-        connector
-    );
-
-    connector.createSegmentTable();
-
-    publisher.publishSegment(segment1);
-    publisher.publishSegment(segment2);
+    setUp(derbyConnectorRule);
   }
 
   @After
-  public void teardown()
+  public void tearDown()
   {
-    if (sqlSegmentsMetadataManager.isPollingDatabasePeriodically()) {
-      sqlSegmentsMetadataManager.stopPollingDatabasePeriodically();
-    }
-    sqlSegmentsMetadataManager.stop();
+    teardownManager();
+  }
+
+  @Test
+  public void testPollEmpty()
+  {
+    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
+    sqlSegmentsMetadataManager.poll();
+    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
+    Assert.assertTrue(
+        sqlSegmentsMetadataManager
+            .getRecentDataSourcesSnapshot()
+            .getDataSourcesWithAllUsedSegments()
+            .isEmpty()
+    );
   }
 
   @Test
   public void testPollPeriodically()
   {
-    DataSourcesSnapshot dataSourcesSnapshot = sqlSegmentsMetadataManager.getDataSourcesSnapshot();
+    publishWikiSegments();
+    DataSourcesSnapshot dataSourcesSnapshot = sqlSegmentsMetadataManager.getLatestDataSourcesSnapshot();
     Assert.assertNull(dataSourcesSnapshot);
     sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
     Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
     // This call make sure that the first poll is completed
     sqlSegmentsMetadataManager.useLatestSnapshotIfWithinDelay();
     Assert.assertTrue(sqlSegmentsMetadataManager.getLatestDatabasePoll() instanceof SqlSegmentsMetadataManager.PeriodicDatabasePoll);
-    dataSourcesSnapshot = sqlSegmentsMetadataManager.getDataSourcesSnapshot();
+    dataSourcesSnapshot = sqlSegmentsMetadataManager.getLatestDataSourcesSnapshot();
     Assert.assertEquals(
-        ImmutableSet.of("wikipedia"),
-        sqlSegmentsMetadataManager.retrieveAllDataSourceNames()
-    );
-    Assert.assertEquals(
-        ImmutableList.of("wikipedia"),
+        ImmutableList.of(TestDataSource.WIKI),
         dataSourcesSnapshot.getDataSourcesWithAllUsedSegments()
                            .stream()
                            .map(ImmutableDruidDataSource::getName)
                            .collect(Collectors.toList())
     );
     Assert.assertEquals(
-        ImmutableSet.of(segment1, segment2),
-        ImmutableSet.copyOf(dataSourcesSnapshot.getDataSource("wikipedia").getSegments())
+        ImmutableSet.of(wikiSegment1, wikiSegment2),
+        ImmutableSet.copyOf(dataSourcesSnapshot.getDataSource(TestDataSource.WIKI).getSegments())
     );
     Assert.assertEquals(
-        ImmutableSet.of(segment1, segment2),
-        ImmutableSet.copyOf(dataSourcesSnapshot.iterateAllUsedSegmentsInSnapshot())
+        ImmutableSet.of(wikiSegment1, wikiSegment2),
+        retrieveAllUsedSegments()
     );
   }
 
   @Test
   public void testPollOnDemand()
   {
-    DataSourcesSnapshot dataSourcesSnapshot = sqlSegmentsMetadataManager.getDataSourcesSnapshot();
+    publishWikiSegments();
+    DataSourcesSnapshot dataSourcesSnapshot = sqlSegmentsMetadataManager.getLatestDataSourcesSnapshot();
     Assert.assertNull(dataSourcesSnapshot);
     // This should return false and not wait/poll anything as we did not schedule periodic poll
     Assert.assertFalse(sqlSegmentsMetadataManager.useLatestSnapshotIfWithinDelay());
@@ -194,58 +159,53 @@ public class SqlSegmentsMetadataManagerTest
     sqlSegmentsMetadataManager.forceOrWaitOngoingDatabasePoll();
     Assert.assertFalse(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
     Assert.assertTrue(sqlSegmentsMetadataManager.getLatestDatabasePoll() instanceof SqlSegmentsMetadataManager.OnDemandDatabasePoll);
-    dataSourcesSnapshot = sqlSegmentsMetadataManager.getDataSourcesSnapshot();
+    dataSourcesSnapshot = sqlSegmentsMetadataManager.getLatestDataSourcesSnapshot();
     Assert.assertEquals(
-        ImmutableSet.of("wikipedia"),
-        sqlSegmentsMetadataManager.retrieveAllDataSourceNames()
-    );
-    Assert.assertEquals(
-        ImmutableList.of("wikipedia"),
+        ImmutableList.of(TestDataSource.WIKI),
         dataSourcesSnapshot.getDataSourcesWithAllUsedSegments()
                            .stream()
                            .map(ImmutableDruidDataSource::getName)
                            .collect(Collectors.toList())
     );
     Assert.assertEquals(
-        ImmutableSet.of(segment1, segment2),
-        ImmutableSet.copyOf(dataSourcesSnapshot.getDataSource("wikipedia").getSegments())
+        ImmutableSet.of(wikiSegment1, wikiSegment2),
+        ImmutableSet.copyOf(dataSourcesSnapshot.getDataSource(TestDataSource.WIKI).getSegments())
     );
     Assert.assertEquals(
-        ImmutableSet.of(segment1, segment2),
-        ImmutableSet.copyOf(dataSourcesSnapshot.iterateAllUsedSegmentsInSnapshot())
+        ImmutableSet.of(wikiSegment1, wikiSegment2),
+        retrieveAllUsedSegments()
     );
   }
 
   @Test(timeout = 60_000)
   public void testPollPeriodicallyAndOnDemandInterleave() throws Exception
   {
-    DataSourcesSnapshot dataSourcesSnapshot = sqlSegmentsMetadataManager.getDataSourcesSnapshot();
+    publishWikiSegments();
+    DataSourcesSnapshot dataSourcesSnapshot = sqlSegmentsMetadataManager.getLatestDataSourcesSnapshot();
     Assert.assertNull(dataSourcesSnapshot);
     sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
     Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
     // This call make sure that the first poll is completed
     sqlSegmentsMetadataManager.useLatestSnapshotIfWithinDelay();
     Assert.assertTrue(sqlSegmentsMetadataManager.getLatestDatabasePoll() instanceof SqlSegmentsMetadataManager.PeriodicDatabasePoll);
-    dataSourcesSnapshot = sqlSegmentsMetadataManager.getDataSourcesSnapshot();
+    dataSourcesSnapshot = sqlSegmentsMetadataManager.getLatestDataSourcesSnapshot();
     Assert.assertEquals(
-        ImmutableList.of("wikipedia"),
+        ImmutableList.of(TestDataSource.WIKI),
         dataSourcesSnapshot.getDataSourcesWithAllUsedSegments()
                            .stream()
                            .map(ImmutableDruidDataSource::getName)
                            .collect(Collectors.toList())
     );
-    final String newDataSource2 = "wikipedia2";
-    final DataSegment newSegment2 = createNewSegment1(newDataSource2);
-    publisher.publishSegment(newSegment2);
+    publishSegment(createNewSegment1(TestDataSource.KOALA));
 
     // This call will force on demand poll
     sqlSegmentsMetadataManager.forceOrWaitOngoingDatabasePoll();
     Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
     Assert.assertTrue(sqlSegmentsMetadataManager.getLatestDatabasePoll() instanceof SqlSegmentsMetadataManager.OnDemandDatabasePoll);
     // New datasource should now be in the snapshot since we just force on demand poll.
-    dataSourcesSnapshot = sqlSegmentsMetadataManager.getDataSourcesSnapshot();
+    dataSourcesSnapshot = sqlSegmentsMetadataManager.getLatestDataSourcesSnapshot();
     Assert.assertEquals(
-        ImmutableList.of("wikipedia2", "wikipedia"),
+        ImmutableList.of(TestDataSource.KOALA, TestDataSource.WIKI),
         dataSourcesSnapshot.getDataSourcesWithAllUsedSegments()
                            .stream()
                            .map(ImmutableDruidDataSource::getName)
@@ -253,54 +213,57 @@ public class SqlSegmentsMetadataManagerTest
     );
 
     final String newDataSource3 = "wikipedia3";
-    final DataSegment newSegment3 = createNewSegment1(newDataSource3);
-    publisher.publishSegment(newSegment3);
+    publishSegment(createNewSegment1(newDataSource3));
 
     // This time wait for periodic poll (not doing on demand poll so we have to wait a bit...)
-    while (sqlSegmentsMetadataManager.getDataSourcesSnapshot().getDataSource(newDataSource3) == null) {
+    while (sqlSegmentsMetadataManager.getLatestDataSourcesSnapshot().getDataSource(newDataSource3) == null) {
       Thread.sleep(1000);
     }
     Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
     Assert.assertTrue(sqlSegmentsMetadataManager.getLatestDatabasePoll() instanceof SqlSegmentsMetadataManager.PeriodicDatabasePoll);
-    dataSourcesSnapshot = sqlSegmentsMetadataManager.getDataSourcesSnapshot();
+    dataSourcesSnapshot = sqlSegmentsMetadataManager.getLatestDataSourcesSnapshot();
     Assert.assertEquals(
-        ImmutableList.of("wikipedia2", "wikipedia3", "wikipedia"),
+        ImmutableSet.of(TestDataSource.KOALA, "wikipedia3", TestDataSource.WIKI),
         dataSourcesSnapshot.getDataSourcesWithAllUsedSegments()
                            .stream()
                            .map(ImmutableDruidDataSource::getName)
-                           .collect(Collectors.toList())
+                           .collect(Collectors.toSet())
     );
   }
 
   @Test
-  public void testPrepareImmutableDataSourceWithUsedSegmentsAwaitsPollOnRestart() throws IOException
+  public void testPrepareImmutableDataSourceWithUsedSegmentsAwaitsPollOnRestart()
   {
-    DataSegment newSegment = pollThenStopThenStartIntro();
+    publishWikiSegments();
+    DataSegment koalaSegment = pollThenStopThenPublishKoalaSegment();
     Assert.assertEquals(
-        ImmutableSet.of(newSegment),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.getImmutableDataSourceWithUsedSegments("wikipedia2").getSegments())
+        Set.of(koalaSegment),
+        Set.copyOf(sqlSegmentsMetadataManager.getRecentDataSourcesSnapshot().getDataSource(TestDataSource.KOALA).getSegments())
     );
   }
 
   @Test
-  public void testGetDataSourceWithUsedSegmentsAwaitsPollOnRestart() throws IOException
+  public void testGetDataSourceWithUsedSegmentsAwaitsPollOnRestart()
   {
-    DataSegment newSegment = pollThenStopThenStartIntro();
+    publishWikiSegments();
+    DataSegment koalaSegment = pollThenStopThenPublishKoalaSegment();
     Assert.assertEquals(
-        ImmutableSet.of(newSegment),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.getImmutableDataSourceWithUsedSegments("wikipedia2").getSegments())
+        Set.of(koalaSegment),
+        Set.copyOf(sqlSegmentsMetadataManager.getRecentDataSourcesSnapshot().getDataSource(TestDataSource.KOALA).getSegments())
     );
   }
 
   @Test
-  public void testPrepareImmutableDataSourcesWithAllUsedSegmentsAwaitsPollOnRestart() throws IOException
+  public void testPrepareImmutableDataSourcesWithAllUsedSegmentsAwaitsPollOnRestart()
   {
-    DataSegment newSegment = pollThenStopThenStartIntro();
+    publishWikiSegments();
+    DataSegment koalaSegment = pollThenStopThenPublishKoalaSegment();
     Assert.assertEquals(
-        ImmutableSet.of(segment1, segment2, newSegment),
+        ImmutableSet.of(wikiSegment1, wikiSegment2, koalaSegment),
         ImmutableSet.copyOf(
             sqlSegmentsMetadataManager
-                .getImmutableDataSourcesWithAllUsedSegments()
+                .getRecentDataSourcesSnapshot()
+                .getDataSourcesWithAllUsedSegments()
                 .stream()
                 .flatMap((ImmutableDruidDataSource dataSource) -> dataSource.getSegments().stream())
                 .iterator()
@@ -309,531 +272,98 @@ public class SqlSegmentsMetadataManagerTest
   }
 
   @Test
-  public void testIterateAllUsedSegmentsAwaitsPollOnRestart() throws IOException
+  public void testIterateAllUsedSegmentsAwaitsPollOnRestart()
   {
-    DataSegment newSegment = pollThenStopThenStartIntro();
+    publishWikiSegments();
+    DataSegment koalaSegment = pollThenStopThenPublishKoalaSegment();
     Assert.assertEquals(
-        ImmutableSet.of(segment1, segment2, newSegment),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
+        ImmutableSet.of(wikiSegment1, wikiSegment2, koalaSegment),
+        retrieveAllUsedSegments()
     );
   }
 
-  private DataSegment pollThenStopThenStartIntro() throws IOException
+  private DataSegment pollThenStopThenPublishKoalaSegment()
   {
     sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
     sqlSegmentsMetadataManager.poll();
     sqlSegmentsMetadataManager.stopPollingDatabasePeriodically();
     Assert.assertFalse(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-    Assert.assertEquals(
-        ImmutableSet.of("wikipedia"),
-        sqlSegmentsMetadataManager.retrieveAllDataSourceNames()
-    );
-    DataSegment newSegment = createNewSegment1("wikipedia2");
-    publisher.publishSegment(newSegment);
+    final DataSegment koalaSegment = createNewSegment1(TestDataSource.KOALA);
+    publishSegment(koalaSegment);
     sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    return newSegment;
+    return koalaSegment;
   }
 
+  /**
+   * Create a corrupted segment entry in the segments table to test
+   * whether the overall loading of segments from the database continues to work
+   * even if one of the entries is corrupted.
+   */
   @Test
   public void testPollWithCorruptedSegment()
   {
-    //create a corrupted segment entry in segments table, which tests
-    //that overall loading of segments from database continues to work
-    //even in one of the entries are corrupted.
-    publisher.publishSegment(
-        "corrupt-segment-id",
-        "corrupt-datasource",
-        "corrupt-create-date",
-        "corrupt-start-date",
-        "corrupt-end-date",
-        true,
-        "corrupt-version",
-        true,
-        StringUtils.toUtf8("corrupt-payload")
-    );
+    publishWikiSegments();
+
+    final DataSegment corruptSegment = DataSegment.builder(wikiSegment1).dataSource("corrupt-datasource").build();
+    publishSegment(corruptSegment);
+    updateSegmentPayload(corruptSegment, StringUtils.toUtf8("corrupt-payload"));
 
     EmittingLogger.registerEmitter(new NoopServiceEmitter());
     sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
     Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
 
+    DataSourcesSnapshot snapshot = sqlSegmentsMetadataManager.getRecentDataSourcesSnapshot();
     Assert.assertEquals(
-        "wikipedia",
-        Iterables.getOnlyElement(sqlSegmentsMetadataManager.getImmutableDataSourcesWithAllUsedSegments()).getName()
+        TestDataSource.WIKI,
+        Iterables.getOnlyElement(snapshot.getDataSourcesWithAllUsedSegments()).getName()
     );
   }
 
-  @Test
-  public void testGetUnusedSegmentIntervals()
-  {
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-    int numChangedSegments = sqlSegmentsMetadataManager.markAsUnusedAllSegmentsInDataSource("wikipedia");
-    Assert.assertEquals(2, numChangedSegments);
-
-    Assert.assertEquals(
-        ImmutableList.of(segment2.getInterval()),
-        sqlSegmentsMetadataManager.getUnusedSegmentIntervals("wikipedia", DateTimes.of("3000"), 1)
-    );
-
-    Assert.assertEquals(
-        ImmutableList.of(segment2.getInterval(), segment1.getInterval()),
-        sqlSegmentsMetadataManager.getUnusedSegmentIntervals("wikipedia", DateTimes.of("3000"), 5)
-    );
-  }
-
-  @Test(timeout = 60_000)
-  public void testMarkAsUnusedAllSegmentsInDataSource() throws IOException, InterruptedException
-  {
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final String newDataSource = "wikipedia2";
-    final DataSegment newSegment = createNewSegment1(newDataSource);
-
-    publisher.publishSegment(newSegment);
-
-    awaitDataSourceAppeared(newDataSource);
-    int numChangedSegments = sqlSegmentsMetadataManager.markAsUnusedAllSegmentsInDataSource(newDataSource);
-    Assert.assertEquals(1, numChangedSegments);
-    awaitDataSourceDisappeared(newDataSource);
-    Assert.assertNull(sqlSegmentsMetadataManager.getImmutableDataSourceWithUsedSegments(newDataSource));
-  }
-
-  private static DataSegment createNewSegment1(String newDataSource)
+  private static DataSegment createNewSegment1(String datasource)
   {
     return createSegment(
-        newDataSource,
+        datasource,
         "2017-10-15T00:00:00.000/2017-10-16T00:00:00.000",
-        "2017-10-15T20:19:12.565Z",
-        "index/y=2017/m=10/d=15/2017-10-16T20:19:12.565Z/0/index.zip",
-        0
+        "2017-10-15T20:19:12.565Z"
     );
   }
 
-  private static DataSegment createNewSegment2(String newDataSource)
+  private static DataSegment createNewSegment2(String datasource)
   {
     return createSegment(
-        newDataSource,
+        datasource,
         "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-15T20:19:12.565Z",
-        "index/y=2017/m=10/d=15/2017-10-16T20:19:12.565Z/0/index.zip",
-        0
-    );
-  }
-
-  @Test(timeout = 60_000)
-  public void testMarkSegmentAsUnused() throws IOException, InterruptedException
-  {
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final String newDataSource = "wikipedia2";
-    final DataSegment newSegment = createSegment(
-        newDataSource,
-        "2017-10-15T00:00:00.000/2017-10-16T00:00:00.000",
-        "2017-10-15T20:19:12.565Z",
-        "wikipedia2/index/y=2017/m=10/d=15/2017-10-16T20:19:12.565Z/0/index.zip",
-        0
-    );
-
-    publisher.publishSegment(newSegment);
-    awaitDataSourceAppeared(newDataSource);
-    Assert.assertNotNull(sqlSegmentsMetadataManager.getImmutableDataSourceWithUsedSegments(newDataSource));
-
-    Assert.assertTrue(sqlSegmentsMetadataManager.markSegmentAsUnused(newSegment.getId().toString()));
-    awaitDataSourceDisappeared(newDataSource);
-    Assert.assertNull(sqlSegmentsMetadataManager.getImmutableDataSourceWithUsedSegments(newDataSource));
-  }
-
-  private void awaitDataSourceAppeared(String newDataSource) throws InterruptedException
-  {
-    while (sqlSegmentsMetadataManager.getImmutableDataSourceWithUsedSegments(newDataSource) == null) {
-      Thread.sleep(1000);
-    }
-  }
-
-  private void awaitDataSourceDisappeared(String dataSource) throws InterruptedException
-  {
-    while (sqlSegmentsMetadataManager.getImmutableDataSourceWithUsedSegments(dataSource) != null) {
-      Thread.sleep(1000);
-    }
-  }
-
-  @Test
-  public void testMarkAsUsedNonOvershadowedSegments() throws Exception
-  {
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final String newDataSource = "wikipedia2";
-    final DataSegment newSegment1 = createSegment(
-        newDataSource,
-        "2017-10-15T00:00:00.000/2017-10-17T00:00:00.000",
-        "2017-10-15T20:19:12.565Z",
-        "index/y=2017/m=10/d=15/2017-10-16T20:19:12.565Z/0/index.zip",
-        0
-    );
-
-    final DataSegment newSegment2 = createSegment(
-        newDataSource,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-16T20:19:12.565Z",
-        "index/y=2017/m=10/d=15/2017-10-16T20:19:12.565Z/0/index.zip",
-        1
-    );
-
-    // Overshadowed by newSegment2
-    final DataSegment newSegment3 = createSegment(
-        newDataSource,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-15T20:19:12.565Z",
-        "index/y=2017/m=10/d=15/2017-10-16T20:19:12.565Z/0/index.zip",
-        1
-    );
-
-    publish(newSegment1, false);
-    publish(newSegment2, false);
-    publish(newSegment3, false);
-    final ImmutableSet<String> segmentIds = ImmutableSet.of(
-        newSegment1.getId().toString(),
-        newSegment2.getId().toString(),
-        newSegment3.getId().toString()
-    );
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(segment1, segment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-    Assert.assertEquals(2, sqlSegmentsMetadataManager.markAsUsedNonOvershadowedSegments(newDataSource, segmentIds));
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(segment1, segment2, newSegment1, newSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test(expected = UnknownSegmentIdsException.class)
-  public void testMarkAsUsedNonOvershadowedSegmentsInvalidDataSource() throws Exception
-  {
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final String newDataSource = "wikipedia2";
-    final DataSegment newSegment1 = createNewSegment1(newDataSource);
-
-    final DataSegment newSegment2 = createNewSegment1(newDataSource);
-
-    publish(newSegment1, false);
-    publish(newSegment2, false);
-    final ImmutableSet<String> segmentIds =
-        ImmutableSet.of(newSegment1.getId().toString(), newSegment2.getId().toString());
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(segment1, segment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-    // none of the segments are in data source
-    Assert.assertEquals(0, sqlSegmentsMetadataManager.markAsUsedNonOvershadowedSegments("wrongDataSource", segmentIds));
-  }
-
-  @Test(expected = UnknownSegmentIdsException.class)
-  public void testMarkAsUsedNonOvershadowedSegmentsWithInvalidSegmentIds() throws UnknownSegmentIdsException
-  {
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final String newDataSource = "wikipedia2";
-    final DataSegment newSegment1 = createNewSegment1(newDataSource);
-
-    final DataSegment newSegment2 = createNewSegment1(newDataSource);
-
-    final ImmutableSet<String> segmentIds =
-        ImmutableSet.of(newSegment1.getId().toString(), newSegment2.getId().toString());
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(segment1, segment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-    // none of the segments are in data source
-    Assert.assertEquals(0, sqlSegmentsMetadataManager.markAsUsedNonOvershadowedSegments(newDataSource, segmentIds));
-  }
-
-  @Test
-  public void testMarkAsUsedNonOvershadowedSegmentsInInterval() throws IOException
-  {
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final String newDataSource = "wikipedia2";
-    final DataSegment newSegment1 = createNewSegment1(newDataSource);
-
-    final DataSegment newSegment2 = createSegment(
-        newDataSource,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-16T20:19:12.565Z",
-        "index/y=2017/m=10/d=15/2017-10-16T20:19:12.565Z/0/index.zip",
-        1
-    );
-
-    final DataSegment newSegment3 = createSegment(
-        newDataSource,
-        "2017-10-19T00:00:00.000/2017-10-20T00:00:00.000",
-        "2017-10-15T20:19:12.565Z",
-        "index/y=2017/m=10/d=15/2017-10-16T20:19:12.565Z/0/index.zip",
-        0
-    );
-
-    // Overshadowed by newSegment2
-    final DataSegment newSegment4 = createNewSegment2(newDataSource);
-
-    publish(newSegment1, false);
-    publish(newSegment2, false);
-    publish(newSegment3, false);
-    publish(newSegment4, false);
-    final Interval theInterval = Intervals.of("2017-10-15T00:00:00.000/2017-10-18T00:00:00.000");
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(segment1, segment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-
-    // 2 out of 3 segments match the interval
-    Assert.assertEquals(2, sqlSegmentsMetadataManager.markAsUsedNonOvershadowedSegmentsInInterval(newDataSource, theInterval));
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(segment1, segment2, newSegment1, newSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test(expected = IllegalArgumentException.class)
-  public void testMarkAsUsedNonOvershadowedSegmentsInIntervalWithInvalidInterval() throws IOException
-  {
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final String newDataSource = "wikipedia2";
-    final DataSegment newSegment1 = createNewSegment1(newDataSource);
-
-    final DataSegment newSegment2 = createNewSegment2(newDataSource);
-
-    publish(newSegment1, false);
-    publish(newSegment2, false);
-    // invalid interval start > end
-    final Interval theInterval = Intervals.of("2017-10-22T00:00:00.000/2017-10-02T00:00:00.000");
-    sqlSegmentsMetadataManager.markAsUsedNonOvershadowedSegmentsInInterval(newDataSource, theInterval);
-  }
-
-  @Test
-  public void testMarkAsUsedNonOvershadowedSegmentsInIntervalWithOverlappingInterval() throws IOException
-  {
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final String newDataSource = "wikipedia2";
-    final DataSegment newSegment1 = createSegment(
-        newDataSource,
-        "2017-10-15T00:00:00.000/2017-10-17T00:00:00.000",
-        "2017-10-15T20:19:12.565Z",
-        "index/y=2017/m=10/d=15/2017-10-16T20:19:12.565Z/0/index.zip",
-        0
-    );
-
-    final DataSegment newSegment2 = createSegment(
-        newDataSource,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-16T20:19:12.565Z",
-        "index/y=2017/m=10/d=15/2017-10-16T20:19:12.565Z/0/index.zip",
-        1
-    );
-
-    final DataSegment newSegment3 = createSegment(
-        newDataSource,
-        "2017-10-19T00:00:00.000/2017-10-22T00:00:00.000",
-        "2017-10-15T20:19:12.565Z",
-        "index/y=2017/m=10/d=15/2017-10-16T20:19:12.565Z/0/index.zip",
-        0
-    );
-
-    // Overshadowed by newSegment2
-    final DataSegment newSegment4 = createNewSegment2(newDataSource);
-
-    publish(newSegment1, false);
-    publish(newSegment2, false);
-    publish(newSegment3, false);
-    publish(newSegment4, false);
-    final Interval theInterval = Intervals.of("2017-10-16T00:00:00.000/2017-10-20T00:00:00.000");
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(segment1, segment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-
-    // 1 out of 3 segments match the interval, other 2 overlap, only the segment fully contained will be marked unused
-    Assert.assertEquals(1, sqlSegmentsMetadataManager.markAsUsedNonOvershadowedSegmentsInInterval(newDataSource, theInterval));
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(segment1, segment2, newSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
+        "2017-10-15T20:19:12.565Z"
     );
   }
 
   @Test
-  public void testMarkSegmentsAsUnused() throws IOException
+  public void test_poll_doesNotRetrieveUnusedSegments()
   {
+    publishWikiSegments();
+    final DataSegment koalaSegment1 = createNewSegment1(TestDataSource.KOALA);
+    final DataSegment koalaSegment2 = createNewSegment2(TestDataSource.KOALA);
+
+    publishSegment(koalaSegment1);
+    publishSegment(koalaSegment2);
+
+    // Poll all segments
     sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
     sqlSegmentsMetadataManager.poll();
     Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
+    Assert.assertEquals(
+        Set.of(wikiSegment1, wikiSegment2, koalaSegment1, koalaSegment2),
+        retrieveAllUsedSegments()
+    );
 
-    final String newDataSource = "wikipedia2";
-    final DataSegment newSegment1 = createNewSegment1(newDataSource);
+    // Mark the koala segments as unused
+    Assert.assertEquals(2, markSegmentsAsUnused(koalaSegment1.getId(), koalaSegment2.getId()));
 
-    final DataSegment newSegment2 = createNewSegment1(newDataSource);
-
-    publisher.publishSegment(newSegment1);
-    publisher.publishSegment(newSegment2);
-    final ImmutableSet<String> segmentIds =
-        ImmutableSet.of(newSegment1.getId().toString(), newSegment1.getId().toString());
-
-    Assert.assertEquals(segmentIds.size(), sqlSegmentsMetadataManager.markSegmentsAsUnused(newDataSource, segmentIds));
+    // Verify that subsequent poll only retrieves the used segments
     sqlSegmentsMetadataManager.poll();
     Assert.assertEquals(
-        ImmutableSet.of(segment1, segment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test
-  public void testMarkSegmentsAsUnusedInvalidDataSource() throws IOException
-  {
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final String newDataSource = "wikipedia2";
-    final DataSegment newSegment1 = createNewSegment1(newDataSource);
-
-    final DataSegment newSegment2 = createNewSegment1(newDataSource);
-
-    publisher.publishSegment(newSegment1);
-    publisher.publishSegment(newSegment2);
-    final ImmutableSet<String> segmentIds =
-        ImmutableSet.of(newSegment1.getId().toString(), newSegment2.getId().toString());
-    // none of the segments are in data source
-    Assert.assertEquals(0, sqlSegmentsMetadataManager.markSegmentsAsUnused("wrongDataSource", segmentIds));
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(segment1, segment2, newSegment1, newSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test
-  public void testMarkAsUnusedSegmentsInInterval() throws IOException
-  {
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final String newDataSource = "wikipedia2";
-    final DataSegment newSegment1 = createNewSegment1(newDataSource);
-
-    final DataSegment newSegment2 = createNewSegment2(newDataSource);
-
-    final DataSegment newSegment3 = createSegment(
-        newDataSource,
-        "2017-10-19T00:00:00.000/2017-10-20T00:00:00.000",
-        "2017-10-15T20:19:12.565Z",
-        "index/y=2017/m=10/d=15/2017-10-16T20:19:12.565Z/0/index.zip",
-        0
-    );
-
-    publisher.publishSegment(newSegment1);
-    publisher.publishSegment(newSegment2);
-    publisher.publishSegment(newSegment3);
-    final Interval theInterval = Intervals.of("2017-10-15T00:00:00.000/2017-10-18T00:00:00.000");
-
-    // 2 out of 3 segments match the interval
-    Assert.assertEquals(2, sqlSegmentsMetadataManager.markAsUnusedSegmentsInInterval(newDataSource, theInterval));
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(segment1, segment2, newSegment3),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test(expected = IllegalArgumentException.class)
-  public void testMarkAsUnusedSegmentsInIntervalWithInvalidInterval() throws IOException
-  {
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final String newDataSource = "wikipedia2";
-    final DataSegment newSegment1 = createNewSegment1(newDataSource);
-
-    final DataSegment newSegment2 = createNewSegment2(newDataSource);
-
-    publisher.publishSegment(newSegment1);
-    publisher.publishSegment(newSegment2);
-    // invalid interval start > end
-    final Interval theInterval = Intervals.of("2017-10-22T00:00:00.000/2017-10-02T00:00:00.000");
-    sqlSegmentsMetadataManager.markAsUnusedSegmentsInInterval(newDataSource, theInterval);
-  }
-
-  @Test
-  public void testMarkAsUnusedSegmentsInIntervalWithOverlappingInterval() throws IOException
-  {
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final String newDataSource = "wikipedia2";
-    final DataSegment newSegment1 = createSegment(
-        newDataSource,
-        "2017-10-15T00:00:00.000/2017-10-17T00:00:00.000",
-        "2017-10-15T20:19:12.565Z",
-        "index/y=2017/m=10/d=15/2017-10-16T20:19:12.565Z/0/index.zip",
-        0
-    );
-
-    final DataSegment newSegment2 = createNewSegment2(newDataSource);
-
-    final DataSegment newSegment3 = createSegment(
-        newDataSource,
-        "2017-10-19T00:00:00.000/2017-10-22T00:00:00.000",
-        "2017-10-15T20:19:12.565Z",
-        "index/y=2017/m=10/d=15/2017-10-16T20:19:12.565Z/0/index.zip",
-        0
-    );
-
-    publisher.publishSegment(newSegment1);
-    publisher.publishSegment(newSegment2);
-    publisher.publishSegment(newSegment3);
-    final Interval theInterval = Intervals.of("2017-10-16T00:00:00.000/2017-10-20T00:00:00.000");
-
-    // 1 out of 3 segments match the interval, other 2 overlap, only the segment fully contained will be marked unused
-    Assert.assertEquals(1, sqlSegmentsMetadataManager.markAsUnusedSegmentsInInterval(newDataSource, theInterval));
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(segment1, segment2, newSegment1, newSegment3),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
+        Set.of(wikiSegment1, wikiSegment2),
+        retrieveAllUsedSegments()
     );
   }
 
@@ -848,44 +378,113 @@ public class SqlSegmentsMetadataManagerTest
   }
 
   @Test
-  public void testIterateAllUsedNonOvershadowedSegmentsForDatasourceInterval() throws Exception
+  public void testIterateAllUsedNonOvershadowedSegmentsForDatasourceInterval()
   {
+    publishWikiSegments();
     final Interval theInterval = Intervals.of("2012-03-15T00:00:00.000/2012-03-20T00:00:00.000");
-    Optional<Iterable<DataSegment>> segments = sqlSegmentsMetadataManager.iterateAllUsedNonOvershadowedSegmentsForDatasourceInterval(
-        "wikipedia", theInterval, true
-    );
-    Assert.assertTrue(segments.isPresent());
-    Set<DataSegment> dataSegmentSet = ImmutableSet.copyOf(segments.get());
-    Assert.assertEquals(1, dataSegmentSet.size());
-    Assert.assertTrue(dataSegmentSet.contains(segment1));
 
-    final DataSegment newSegment2 = createSegment(
-        "wikipedia",
-        "2012-03-16T00:00:00.000/2012-03-17T00:00:00.000",
-        "2017-10-15T20:19:12.565Z",
-        "index/y=2017/m=10/d=15/2017-10-16T20:19:12.565Z/0/index.zip",
-        0
+    // Re-create SqlSegmentsMetadataManager with a higher poll duration
+    final SegmentsMetadataManagerConfig config =
+        new SegmentsMetadataManagerConfig(Period.seconds(1), null, null);
+    sqlSegmentsMetadataManager = new SqlSegmentsMetadataManager(
+        jsonMapper,
+        Suppliers.ofInstance(config),
+        derbyConnectorRule.metadataTablesConfigSupplier(),
+        derbyConnectorRule.getConnector(),
+        segmentSchemaCache,
+        CentralizedDatasourceSchemaConfig.create(),
+        NoopServiceEmitter.instance()
     );
-    publisher.publishSegment(newSegment2);
+    sqlSegmentsMetadataManager.start();
+
+    Set<DataSegment> segments = sqlSegmentsMetadataManager
+        .getRecentDataSourcesSnapshot()
+        .getAllUsedNonOvershadowedSegments(TestDataSource.WIKI, theInterval);
+    Assert.assertEquals(Set.of(wikiSegment1), segments);
+
+    final DataSegment wikiSegment3 = createSegment(
+        TestDataSource.WIKI,
+        "2012-03-16T00:00:00.000/2012-03-17T00:00:00.000",
+        "2017-10-15T20:19:12.565Z"
+    );
+    publishSegment(wikiSegment3);
 
     // New segment is not returned since we call without force poll
-    segments = sqlSegmentsMetadataManager.iterateAllUsedNonOvershadowedSegmentsForDatasourceInterval(
-        "wikipedia", theInterval, false
-    );
-    Assert.assertTrue(segments.isPresent());
-    dataSegmentSet = ImmutableSet.copyOf(segments.get());
-    Assert.assertEquals(1, dataSegmentSet.size());
-    Assert.assertTrue(dataSegmentSet.contains(segment1));
+    segments = sqlSegmentsMetadataManager
+        .getRecentDataSourcesSnapshot()
+        .getAllUsedNonOvershadowedSegments(TestDataSource.WIKI, theInterval);
+    Assert.assertEquals(Set.of(wikiSegment1), segments);
 
     // New segment is returned since we call with force poll
-    segments = sqlSegmentsMetadataManager.iterateAllUsedNonOvershadowedSegmentsForDatasourceInterval(
-        "wikipedia", theInterval, true
-    );
-    Assert.assertTrue(segments.isPresent());
-    dataSegmentSet = ImmutableSet.copyOf(segments.get());
-    Assert.assertEquals(2, dataSegmentSet.size());
-    Assert.assertTrue(dataSegmentSet.contains(segment1));
-    Assert.assertTrue(dataSegmentSet.contains(newSegment2));
+    segments = sqlSegmentsMetadataManager
+        .forceUpdateDataSourcesSnapshot()
+        .getAllUsedNonOvershadowedSegments(TestDataSource.WIKI, theInterval);
+    Assert.assertEquals(Set.of(wikiSegment1, wikiSegment3), segments);
   }
 
+  @Test
+  public void testPopulateUsedFlagLastUpdated()
+  {
+    allowUsedFlagLastUpdatedToBeNullable();
+    final DataSegment koalaSegment = createSegment(
+        TestDataSource.KOALA,
+        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
+        "2017-10-15T20:19:12.565Z"
+    );
+
+    publishUnusedSegments(koalaSegment);
+    updateUsedStatusLastUpdatedToNull(koalaSegment);
+
+    Assert.assertEquals(1, getCountOfRowsWithLastUsedNull());
+    sqlSegmentsMetadataManager.populateUsedFlagLastUpdated();
+    Assert.assertEquals(0, getCountOfRowsWithLastUsedNull());
+  }
+
+  private int getCountOfRowsWithLastUsedNull()
+  {
+    return derbyConnectorRule.getConnector().retryWithHandle(
+        handle -> handle.select(
+            StringUtils.format(
+                "SELECT ID FROM %1$s WHERE USED_STATUS_LAST_UPDATED IS NULL",
+                derbyConnectorRule.segments().getTableName()
+            )
+        ).size()
+    );
+  }
+
+  private void updateSegmentPayload(DataSegment segment, byte[] payload)
+  {
+    derbyConnectorRule.segments().update(
+        "UPDATE %1$s SET PAYLOAD = ? WHERE ID = ?",
+        payload,
+        segment.getId().toString()
+    );
+  }
+
+  private void updateUsedStatusLastUpdatedToNull(DataSegment segment)
+  {
+    derbyConnectorRule.segments().update(
+        "UPDATE %1$s SET USED_STATUS_LAST_UPDATED = NULL WHERE ID = ?",
+        segment.getId().toString()
+    );
+  }
+
+  /**
+   * Alters the column used_status_last_updated to be nullable. This is used to
+   * test backward compatibility with versions of Druid without this column
+   * present in the segments table.
+   */
+  private void allowUsedFlagLastUpdatedToBeNullable()
+  {
+    derbyConnectorRule.segments().update(
+        "ALTER TABLE %1$s ALTER COLUMN USED_STATUS_LAST_UPDATED NULL"
+    );
+  }
+  
+  private Set<DataSegment> retrieveAllUsedSegments()
+  {
+    return Sets.newHashSet(
+        sqlSegmentsMetadataManager.getRecentDataSourcesSnapshot().iterateAllUsedSegmentsInSnapshot()
+    );
+  }  
 }
